--- a/aik-app/aik-manager/src/main/webapp/templates/food/foodList.html
+++ b/aik-app/aik-manager/src/main/webapp/templates/food/foodList.html
@@ -25,7 +25,7 @@
 <tr class="odd gradeX"  th:each="food,iterStat : ${result}"  >
 	<td th:id="${food.id}" th:text="${food.id}"></td>
 	<td th:text="${food.name}"></td>
-	<td th:text="${food.category}"></td>
+	<td th:text="${food.categoryName}"></td>
 	<td th:text="${food.brightSpot}"></td>
 	<td th:text="${food.spotRank}"></td>
 	<td th:text="${food.proteinRadio}"></td>
