--- a/aik-app/aik-manager/src/main/webapp/templates/user/userView.html
+++ b/aik-app/aik-manager/src/main/webapp/templates/user/userView.html
@@ -35,32 +35,14 @@
 				<tr>
 					<td>真实姓名</td>
 					<td>
-						<input type="text" class="form-control r" data-required="true"  data-description="trueName"  data-describedby="trueNamespan" id="trueName" name="trueName" placeholder="真实姓名" value="" th:value="${accUserAccount.realName}"/>
+						<input type="text" class="form-control r" data-required="true"  data-description="realName"  data-describedby="realNamespan" id="realName" name="realName" placeholder="真实姓名" value="" th:value="${accUserAccount.realName}"/>
 						<span class="required">*</span>
-						<span class="help-inline prompt" id="trueNamespan" style="color: #000000"></span>
+						<span class="help-inline prompt" id="realNamespan" style="color: #000000"></span>
 					</td>
 					<td> 昵称</td>
 					<td><input type="text" class="form-control" name="nice" value="" th:value="${accUserAccount.nickName}"/></td>
 				</tr>
-				<tr>
-					<td>QQ</td>
-					<td><input type="text" class="form-control" data-pattern="[0-9]{5,13}" data-description="qq" data-describedby="qqspan" id="qq"  name="qq" placeholder="QQ" value=""/>
-						<span class="help-inline prompt" id="qqspan" style="color: #000000" ></span>
-					</td>
-					<td>MSN</td>
-					<td><input type="text" class="form-control" name="msn" value=""/></td>
-				</tr>
 				
-				<tr>
-					<td>通信地址</td>
-					<td><input type="text"  class="form-control" name="address" value="" /></td>
-					<td> 邮箱</td>
-					<td>
-						<input type="text" class="form-control r" data-required="true" data-pattern="^([\.a-zA-Z0-9_-])+@([a-zA-Z0-9_-])+(\.[a-zA-Z0-9_-])+" data-description="email" data-describedby="emailspan"  name="email" id="email" placeholder="Email" value="" />
-						<span class="required">*</span>
-						<span class="help-inline prompt" id="emailspan" style="color: #000000"></span>
-					</td>
-				</tr>
 				
 				<tr>
 					<td>手机号码</td>
@@ -82,13 +64,24 @@
 				<tr>
 					<td>证件类型</td>
 					<td>
-						<select class="form-control" name="identityType">
+						<select class="form-control">
+							<option value="0" selected="selected">身份证</option>
 						</select>
 					</td>
 					<td> 证件号码</td>
 					<td><input type="text" class="form-control" name="identityCard" value="" />
 					</td>
 				</tr>
+				
+				
+				<tr>
+					<td>通信地址</td>
+					<td><input type="text"  class="form-control" name="address" value="" /></td>
+					<td></td>
+					<td></td>
+				</tr>
+				
+				
 					<tr>
 					<td> 个人图片 <input type="hidden" name="imgNo" value="1" /></td>
 					<td  colspan="3">
@@ -262,15 +255,11 @@ var userView  = {
 						pattern : '手机号码格式不正确'
 					},
 					
-					email : {
-						required : '请输入邮箱地址',
-						pattern : '邮箱地址格式不正确'
-					},
 					userName : {
 						required : '请输入登录名',
 						pattern : '长度必须5-16位字符'
 					},
-					trueName : {
+					realName : {
 						required : '请输入真实姓名'
 					},
 					qq :{
