--- a/aik-app/aik-manager/src/main/webapp/templates/foodCategory/foodCategoryAdd.html
+++ b/aik-app/aik-manager/src/main/webapp/templates/foodCategory/foodCategoryAdd.html
@@ -27,7 +27,7 @@
 				
 				
 				<tr>
-					<td> 个人图片</td>
+					<td>分类图片</td>
 					<td  colspan="3">
 						<div class="fileinput fileinput-new"
 							data-provides="fileinput">
