--- a/aik-app/aik-manager/src/main/webapp/templates/user/userAdd.html
+++ b/aik-app/aik-manager/src/main/webapp/templates/user/userAdd.html
@@ -34,9 +34,9 @@
 				<tr>
 					<td>真实姓名</td>
 					<td>
-						<input type="text" class="form-control r"  data-required="true"  data-description="trueName"  data-describedby="trueNamespan" id="trueName" name="trueName" placeholder="真实姓名" />
+						<input type="text" class="form-control r"  data-required="true"  data-description="realName"  data-describedby="realNamespan" id="realName" name="realName" placeholder="真实姓名" />
 						<span class="required">*</span>
-						<span class="help-inline prompt" id="trueNamespan" style="color: #000000"></span>
+						<span class="help-inline prompt" id="realNamespan" style="color: #000000"></span>
 					</td>
 					<td>昵称</td>
 					<td><input type="text" class="form-control" name="nice" value="" /></td>
@@ -273,7 +273,7 @@
 							required : '请输入登录名',
 							pattern : '长度必须6-16位字符'
 						},
-						trueName : {
+						realName : {
 							required : '请输入真实姓名'
 						},
 						qq :{
