--- a/aik-app/aik-manager/src/main/webapp/templates/food/foodAdd.html
+++ b/aik-app/aik-manager/src/main/webapp/templates/food/foodAdd.html
@@ -85,7 +85,7 @@
 					</td>
 				</tr>
 				<tr>
-					<td> 个人图片</td>
+					<td>食物图片</td>
 					<td  colspan="3">
 						<div class="fileinput fileinput-new"
 							data-provides="fileinput">
