--- a/aik-app/aik-manager/src/main/webapp/templates/food/foodView.html
+++ b/aik-app/aik-manager/src/main/webapp/templates/food/foodView.html
@@ -93,7 +93,7 @@
 							data-provides="fileinput">
 							<div class="fileinput-new thumbnail"
 								style="width: 150px; height: 150px;">
-								<img th:src="@{/static/assets/img/no_image.gif}"  name="userPhoto" alt="" />
+								<img th:src="@{'/image/getSrcImg/food/'+${dietFood.image}}"  name="photo" alt="" />
 								
 							</div>
 							<div class="fileinput-preview fileinput-exists thumbnail"
