--- a/aik-app/aik-manager/src/main/webapp/templates/goods/goodsView.html
+++ b/aik-app/aik-manager/src/main/webapp/templates/goods/goodsView.html
@@ -68,7 +68,7 @@
 							data-provides="fileinput">
 							<div class="fileinput-new thumbnail"
 								style="width: 150px; height: 150px;">
-								<img th:src="@{/static/assets/img/no_image.gif}"  name="userPhoto" alt="" />
+								<img th:src="@{'/image/getSrcImg/goods/'+${stoGoods.image}}"  name="photo" alt="" />
 								
 							</div>
 							<div class="fileinput-preview fileinput-exists thumbnail"
