--- a/aik-app/aik-manager/src/main/webapp/templates/doctor/doctorAdd.html
+++ b/aik-app/aik-manager/src/main/webapp/templates/doctor/doctorAdd.html
@@ -33,20 +33,20 @@
 				<tr>
 					<td>真实姓名</td>
 					<td>
-						<input type="text" class="form-control r"  data-required="true"  data-description="trueName"  data-describedby="trueNamespan" id="trueName" name="trueName" placeholder="真实姓名" />
+						<input type="text" class="form-control r"  data-required="true"  data-description="realName"  data-describedby="realNamespan" id="realName" name="realName" placeholder="真实姓名" />
 						<span class="required">*</span>
-						<span class="help-inline prompt" id="trueNamespan" style="color: #000000"></span>
+						<span class="help-inline prompt" id="realNamespan" style="color: #000000"></span>
 					</td>
 					<td> 职位</td>
 					<td><input type="text" class="form-control" name="position" value="" /></td>
 				</tr>
 				
-				
-				
-				<td>执行医院</td>
+				<tr>
+					<td>执行医院</td>
 					<td><input type="text" class="form-control"  id="hosName"  name="hosName" value="" /></td>
 					<td>科室</td>
 					<td><input type="text" class="form-control" name="hosDepartment" value="" /></td>
+				</tr>
 				
 				<tr>
 					<td>科室电话</td>
@@ -90,19 +90,16 @@
 				<tr>
 					<td> 证件类型</td>
 					<td>
-						<!-- <select class="form-control" name="identityType">
-							#foreach ($codecode in $codeList)
-							<option value="$codecode.id" 
-								>$codecode.codeCName</option>
-							#end
-						</select> -->
+						<select class="form-control">
+							<option value="0" selected="selected">身份证</option>
+						</select>
 					</td>
 					<td> 证件号码</td>
 					<td><input type="text" class="form-control" name="identityCard" />
 					</td>
 				</tr>
 				<tr>
-					<td> 个人图片</td>
+					<td> 个人图片<span class="required">*</span></td>
 					<td  colspan="3">
 						<div class="fileinput fileinput-new"
 							data-provides="fileinput">
@@ -127,6 +124,11 @@
 						<div class="clearfix margin-top-10">
 							<span class="label label-danger"> NOTE! </span> 最佳尺寸:150px * 150px
 						</div>
+						<div class="clearfix margin-top-10">
+							<span class="help-inline prompt" id="imagespan" style="color: #000000"></span>
+						</div>
+						
+						
 					</td>
 				</tr>
 				
@@ -166,7 +168,7 @@
     				Dialog.confirm({
 	    				content:'确定保存?',
 						onSubmitted:function(){
-	   						if(UiUtils.check("userAdd")){
+	   						if(UiUtils.check("doctorAdd")){
 	   							//addUser();
 	   							_this.ajaxSubmit();
 	   						}
@@ -218,14 +220,10 @@
     					Dialog.notice({
     						content: data.info,
     						onSubmitted: function(){
-    							if("用户名已经注册，请重新输入" != data.info){
-    								_this.closedTab();
-    							}
+    							_this.closedTab();
     						},
     						onClosed: function(){
-    							if("用户名已经注册，请重新输入" != data.info){
-    								_this.closedTab();
-    							}
+    							_this.closedTab();
     						}
     					});
     				}
@@ -246,7 +244,7 @@
 				return data;
     		},    		
 			initValidate : function(){
-				jQuery("#userAdd").validate({
+				jQuery("#doctorAdd").validate({
 					onKeyup : true,
 					sendForm : false,
 					eachValidField : function() {
@@ -262,24 +260,16 @@
 							required : '请输入手机号码',
 							pattern : '手机号码必须11位以上数字'
 						},
-						
 						password : {
 							required : '请输入密码',
 							pattern : '请输入6-16位字母，数字'
-						},
-						email : {
-							required : '请输入邮箱地址',
-							pattern : '邮箱地址格式不正确'
 						},
 						userName : {
 							required : '请输入登录名',
 							pattern : '长度必须6-16位字符'
 						},
-						trueName : {
+						realName : {
 							required : '请输入真实姓名'
-						},
-						qq :{
-							pattern : '长度为5以上的'
 						}
 					}
 					
