--- a/aik-app/aik-manager/src/main/webapp/templates/doctor/doctorView.html
+++ b/aik-app/aik-manager/src/main/webapp/templates/doctor/doctorView.html
@@ -35,9 +35,9 @@
 				<tr>
 					<td>真实姓名</td>
 					<td>
-						<input type="text" class="form-control r" data-required="true"  data-description="trueName"  data-describedby="trueNamespan" id="trueName" name="trueName" placeholder="真实姓名" value="" th:value="${accDoctorAccount.realName}"/>
+						<input type="text" class="form-control r" data-required="true"  data-description="realName"  data-describedby="realNamespan" id="realName" name="realName" placeholder="真实姓名" value="" th:value="${accDoctorAccount.realName}"/>
 						<span class="required">*</span>
-						<span class="help-inline prompt" id="trueNamespan" style="color: #000000"></span>
+						<span class="help-inline prompt" id="realNamespan" style="color: #000000"></span>
 					</td>
 					<td> 职位</td>
 					<td><input type="text" class="form-control" name="position" value="" th:value="${accDoctorAccount.position}"/></td>
@@ -246,21 +246,13 @@ var doctorView  = {
 					mobile : {
 						required : '请输入手机号码',
 						pattern : '手机号码格式不正确'
-					},
-					
-					email : {
-						required : '请输入邮箱地址',
-						pattern : '邮箱地址格式不正确'
-					},
+					}
 					userName : {
 						required : '请输入登录名',
 						pattern : '长度必须5-16位字符'
 					},
-					trueName : {
+					realName : {
 						required : '请输入真实姓名'
-					},
-					qq :{
-						pattern : '长度为5以上的'
 					}
 				}
 				
