用户医生表增加封号状态 （有脚本） 戴湘宁

--- a/aik-app/aik-manager/src/main/webapp/templates/user/userAdd.html
+++ b/aik-app/aik-manager/src/main/webapp/templates/user/userAdd.html
@@ -82,8 +82,8 @@
 					<td> 有效性</td>
 					<td>
 						<select class="form-control" name="deleteStatus">
-							<option value="false" selected="selected">有效</option>
-							<option value="true">无效</option>
+							<option value="0" selected="selected">有效</option>
+							<option value="1">封号</option>
 						</select>
 					</td>
 				</tr>
