--- a/aik-app/aik-manager/src/main/webapp/templates/user/userManage.html
+++ b/aik-app/aik-manager/src/main/webapp/templates/user/userManage.html
@@ -96,8 +96,8 @@
 										<label class="control-label col-md-3">是否有效</label>
 										<div class="col-md-9">
 											<select class="form-control" name="deleteStatus">
-												<option value="false" selected ="selected">有效</option>
-												<option value="true">无效</option>
+												<option value="0" selected ="selected">有效</option>
+												<option value="1">封号</option>
 											</select>
 										</div>
 									</div>
