--- a/aik-app/aik-manager/src/main/webapp/templates/doctor/doctorList.html
+++ b/aik-app/aik-manager/src/main/webapp/templates/doctor/doctorList.html
@@ -44,7 +44,8 @@
 		<span th:text="${#dates.format(doctor.createDate, 'yyyy-MM-dd HH:mm:ss')}"> </span>
 		</span>
 	</td>
-	<td></td>
+		<td th:text="${doctor.deleteStatus eq 0}?'正常':'封号'"></td>
+
 	<td>
 		<a href="javascript:;" class="btn default btn-xs blue view">
 				<i class="fa fa-share"></i> 查看
