--- a/aik-app/aik-manager/src/main/webapp/templates/doctor/doctorView.html
+++ b/aik-app/aik-manager/src/main/webapp/templates/doctor/doctorView.html
@@ -27,8 +27,8 @@
 					<td>有效性</td>
 					<td>
 						<select class="form-control" name="deleteStatus">
-							<option selected="selected" value="false">有效</option>
-							<option selected="selected" value="true">无效</option>
+						   	<option value="0" th:if="${accDoctorAccount.deleteStatus eq 0}" th:selected="selected">正常</option>
+						   	<option value="1" th:if="${accDoctorAccount.deleteStatus eq 1}" th:selected="selected">封号</option>
 						</select>
 					</td>
 				</tr>
@@ -246,7 +246,7 @@ var doctorView  = {
 					mobile : {
 						required : '请输入手机号码',
 						pattern : '手机号码格式不正确'
-					},
+					}，
 					userName : {
 						required : '请输入登录名',
 						pattern : '长度必须5-16位字符'
