修改页面样式 戴湘宁

--- a/aik-app/aik-manager/src/main/webapp/templates/commonProblem/commonProblemAdd.html
+++ b/aik-app/aik-manager/src/main/webapp/templates/commonProblem/commonProblemAdd.html
@@ -16,13 +16,13 @@
                     <tr>
                         <td>常见问题</td>
                         <td>
-                            <input title="常见问题" type="text" name="question">
+                            <input class="form-control" title="常见问题" type="text" name="question">
                         </td>
                     </tr>
                     <tr>
                         <td>答案</td>
                         <td>
-                            <textarea name="answer" cols="75"></textarea>
+                            <textarea class="form-control" name="answer" cols="75"></textarea>
                         </td>
                     </tr>
                     <tr>
