--- a/aik-app/aik-manager/src/main/webapp/templates/commonProblem/commonProblemView.html
+++ b/aik-app/aik-manager/src/main/webapp/templates/commonProblem/commonProblemView.html
@@ -19,13 +19,13 @@
                     <tr>
                         <td>常见问题</td>
                         <td>
-                            <input title="常见问题" name="question" type="text" th:value="${commonProblem.question}">
+                            <input class="form-control" title="常见问题" name="question" type="text" th:value="${commonProblem.question}">
                         </td>
                     </tr>
                     <tr>
                         <td>答案</td>
                         <td>
-                            <textarea name="answer" cols="75" th:text="${commonProblem.answer}"></textarea>
+                            <textarea class="form-control" name="answer" cols="75" th:text="${commonProblem.answer}"></textarea>
                         </td>
                     </tr>
                     <tr>
