--- a/aik-app/aik-manager/src/main/webapp/templates/food/foodList.html
+++ b/aik-app/aik-manager/src/main/webapp/templates/food/foodList.html
@@ -51,22 +51,38 @@
 </table>
 
 
-<div class="row">
-	<div class="col-md-5 col-sm-12">
-		<div class="dataTables_info" id="sample_1_info">总数<span th:text="${total}"></span>条,每页显示<span th:text="${pageSize}"></span>条</div>
-	</div>
-	<div class="col-md-7 col-sm-12">
-	
-		<div class="dataTables_paginate paging_bootstrap">
-			<ul id="page_id" class="pagination" style="visibility: visible;">
-					<li data-pre="gar" th:class="${pageInfo.hasPreviousPage}? 'prev' : 'prev disabled' "><a th:id="${pageInfo.prePage}" title="上一页" href="javascript:;"><i class="fa fa-angle-left"></i></a></li>
-					<li  class="active"><a href="javascript:;" th:id="${pageNo}"><span th:text="${pageInfo.prePage}"></span></a></li>
-					<li  class="active"><a href="javascript:;" th:id="${pageNo}"><span th:text="${pageInfo.nextPage}"></span></a></li>
-					<li data-pre="gar" th:class="${pageInfo.hasNextPage}? 'next' : 'next disabled'"><a th:id="${pageInfo.nextPage}" title="下一页" href="javascript:;"><i class="fa fa-angle-right"></i></a></li>
-			</ul>
+	<div class="row">
+		<div class="col-md-5 col-sm-12">
+			<div class="dataTables_info" id="sample_1_info">
+				总数<span th:text="${pageInfo.total}"></span>条,每页显示<span
+					th:text="${pageInfo.pageSize}"></span>条
+			</div>
+		</div>
+		<div class="col-md-7 col-sm-12">
+			<div class="dataTables_paginate paging_bootstrap">
+				<ul id="page_id" class="pagination" style="visibility: visible;">
+					<li data-pre="pageNum"
+						th:class="${pageInfo.hasPreviousPage}? 'prev' : 'prev disabled' ">
+						<a th:attr="value=${pageInfo.prePage}" title="上一页"
+						href="javascript:void(0);"> <i class="fa fa-angle-left"></i>
+					</a>
+					</li>
+					<li data-pre="pageNum"
+						th:each="navNum,iterStat : ${pageInfo.navigatepageNums}"
+						th:class="${navNum == pageInfo.pageNum}? 'active' : ''"><a
+						th:attr="value=${navNum == pageInfo.pageNum} ? 0 : ${navNum}"
+						href="javascript:void(0);"> <span th:text="${navNum}"></span>
+					</a></li>
+					<li data-pre="pageNum"
+						th:class="${pageInfo.hasNextPage}? 'next' : 'next disabled'">
+						<a th:attr="value=${pageInfo.nextPage}" title="下一页"
+						href="javascript:void(0);"> <i class="fa fa-angle-right"></i>
+					</a>
+					</li>
+				</ul>
+			</div>
 		</div>
 	</div>
-</div>
 
 
 
