--- a/aik-app/aik-manager/src/main/webapp/templates/dietRecord/dietRecordManage.html
+++ b/aik-app/aik-manager/src/main/webapp/templates/dietRecord/dietRecordManage.html
@@ -196,11 +196,13 @@
     				return false;
     			});
     			//绑定查看单击事件
-    			jQuery("#list-content").delegate("li[data-pre=gar]", "click", function(){//绑定页码单击事件
-					var num = jQuery(this).find('a').attr("id");
-					_this.load(num);
-					return false;
-				});
+    			jQuery("#list-content").delegate("li[data-pre=pageNum]", "click", function(){//绑定页码单击事件
+	                var num = jQuery(this).find('a').attr("value");
+	                if(num > 0) {
+	                   _this.load(num);
+	                }
+	                return false;
+	            });
     		},
     		
     		//基本信息表单域取值
