--- a/aik-app/aik-manager/src/main/webapp/templates/index.html
+++ b/aik-app/aik-manager/src/main/webapp/templates/index.html
@@ -129,8 +129,8 @@
 						医生管理</a>
 					</li>
 					<li >
-						<a href="javascript:;" data-pre="a-menu" data-url="/admin/officesite/ticketManage.htm">
-						模块管理</a>
+						<a href="javascript:;" data-pre="a-menu" data-url="/article/index">
+						文章管理</a>
 					</li>
 				</ul>
 			</li>
