--- a/aik-app/aik-manager/src/main/webapp/templates/user/userManage.html
+++ b/aik-app/aik-manager/src/main/webapp/templates/user/userManage.html
@@ -59,7 +59,7 @@
 									<div class="form-group">
 										<label class="control-label col-md-3">手机号码</label>
 										<div class="col-md-9">
-											<input type="text" class="form-control" name="mobile"/>
+											<input type="text" class="form-control" name="mobileNo"/>
 										</div>
 									</div>
 								</div>
@@ -72,7 +72,7 @@
 									<div class="form-group">
 										<label class="control-label col-md-3">注册开始时间</label>
 										<div class="col-md-9">
-											<input readonly class="form-control date-picker" name="inTime" id="inTime" size="16" type="text" value=""
+											<input  class="form-control date-picker" name="starttime" id="starttime" size="16" type="text" value=""
 											 data-date-format="yyyy-mm-dd" data-date-viewmode="years"/>
 										</div>
 									</div>
@@ -81,7 +81,7 @@
 									<div class="form-group">
 										<label class="control-label col-md-3">注册结束时间</label>
 										<div class="col-md-9">
-											<input readonly class="form-control date-picker" name="outTime" id="outTime" size="16" type="text" value=""
+											<input  class="form-control date-picker" name="endtime" id="endtime" size="16" type="text" value=""
 											  data-date-format="yyyy-mm-dd" data-date-viewmode="years"/>
 										</div>
 									</div>
@@ -194,11 +194,11 @@
     		bindEvent : function(){
     			var _this = this;
     			//绑定添加单击事件
-    			jQuery("#inTime").datepicker({
+    			jQuery("#starttime").datepicker({
     				language: 'zh-CN',
     				autoclose:true
     			});
-    			jQuery("#outTime").datepicker({
+    			jQuery("#endtime").datepicker({
     				language: 'zh-CN',
     				autoclose:true
     			});
