病历信息管理

--- a/aik-app/aik-manager/src/main/webapp/templates/index.html
+++ b/aik-app/aik-manager/src/main/webapp/templates/index.html
@@ -296,7 +296,7 @@
 				</a>
 				<ul class="sub-menu">
 					<li>
-						<a href="javascript:;" data-pre="a-menu" data-url="/admin/officesite/preAdminManage.htm" >病历信息管理</a>
+						<a href="javascript:;" data-pre="a-menu" data-url="/healthRecord/index" >病历信息管理</a>
 					</li>
 				</ul>
 			</li>
