--- a/aik-app/aik-manager/src/main/webapp/templates/nutritionalIndex/nutritionalIndexList.html
+++ b/aik-app/aik-manager/src/main/webapp/templates/nutritionalIndex/nutritionalIndexList.html
@@ -3,15 +3,11 @@
 <thead>
 <tr>
 	<th>编号</th>
-	<th>商品名称</th>
-	<th>商品价格</th>
-	<th>商品分类</th>
-	<th>是否上架</th>
-	<th>是否推荐</th>
-	<th>商品描述</th>
-	<th>录入时间</th>
-	<!-- <th>修改时间</th> -->
-	<th>有效性</th>
+	<th>用户名称</th>
+	<th>身高</th>
+	<th>体重</th>
+	<th>BMI</th>
+	<th>记录时间</th>
 	<th>操作</th>
 </tr>
 </thead>
@@ -20,43 +16,14 @@
 
 
 
-<tr class="odd gradeX"  th:each="goods,iterStat : ${result}"  >
-	<td th:id="${goods.id}" th:text="${goods.id}"></td>
-	<td th:text="${goods.name}"></td>
-	<td th:text="${goods.price}"></td>
+<tr class="odd gradeX"  th:each="nutritionalIndex,iterStat : ${result}"  >
+	<td th:id="${nutritionalIndex.id}" th:text="${nutritionalIndex.id}"></td>
+	<td th:text="${nutritionalIndex.userName}"></td>
+	<td class="center" th:text="${nutritionalIndex.height}"></td>
+	<td class="center" th:text="${nutritionalIndex.weight}"></td>
+	<td class="center" th:text="${nutritionalIndex.bmi}"></td>
+	<td class="center" th:text="${#dates.format(nutritionalIndex.recordDate, 'yyyy-MM-dd HH:mm:ss')}"></td>
 	<td>
-	<div th:switch="${goods.type}">
-		<span th:case="'0'">特医食品 </span>
-		<span th:case="'1'">保健食品</span>
-		<span th:case="'2'">智能硬件</span>
-		<span th:case="'3'">产品套餐</span>
-	</div>
-	</td>
-	<td>
-	<div th:switch="${goods.type}">
-		<span th:case="'0'">未下架（上架中） </span>
-		<span th:case="'1'">已下架</span>
-	</div>
-	</td>
-	<td>
-	<div th:switch="${goods.isRecommend}">
-		<span th:case="'0'">未推荐 </span>
-		<span th:case="'1'">推荐</span>
-	</div>
-	</td>
-	<td th:text="${goods.description}"></td>
-	<td class="center" th:text="${#dates.format(goods.createDate, 'yyyy-MM-dd HH:mm:ss')}"></td>
-	<td></td>
-	<td>
-		<a href="javascript:;" class="btn default btn-xs blue view">
-				<i class="fa fa-share"></i> 查看
-		</a>
-		<a href="javascript:;" class="btn  default btn-xs purple edit">
-				<i class="fa fa-edit"></i> 编辑
-		</a>
-		<a href="javascript:;" class="btn default btn-xs black delect">
-				<i class="fa fa-trash-o"></i>删除
-		</a>
 	</td>
 </tr>			
 
