--- a/aik-app/aik-manager/src/main/webapp/templates/index.html
+++ b/aik-app/aik-manager/src/main/webapp/templates/index.html
@@ -326,6 +326,19 @@
 					</li>
 				</ul>
 			</li>
+			
+			<li class="user-menu">
+				<a href="javascript:;">
+					<i class="fa fa-table"></i>
+					<span class="title">互助圈管理</span>
+					<span class="arrow "></span>
+				</a>
+				<ul class="sub-menu">
+					<li>
+						<a href="javascript:;" data-pre="a-menu" data-url="/mutualCircle/index" >互助圈</a>
+					</li>
+				</ul>
+			</li>
 		</ul>
 			
 		</div>
