--- a/aik-app/aik-manager/src/main/webapp/templates/mutualCircle/mutualCircleView.html
+++ b/aik-app/aik-manager/src/main/webapp/templates/mutualCircle/mutualCircleView.html
@@ -40,10 +40,10 @@
 			</table>
 			
 			
-			<!-- <div class="form-body">
+		  <div class="form-body">
 				<div class="form-group">
 					<div class="note note-success">
-						<h4 class="block">血糖类</h4>
+						<h4 class="block">点赞</h4>
 							<p></p>
 						</div>
 				</div>
@@ -51,29 +51,17 @@
 				 <table class="table table-striped table-bordered table-hover" id="sample_1">
 					<thead>
 					<tr>
-						<th>血糖mg/l</th>
-						<th>胆固醇mg</th>
-						<th>甘油三酯%</th>
-						<th>高密度脂蛋白mmol/l</th>
-						<th>低密度脂蛋白mmol/l</th>
-						<th>肌酐mg/l</th>
-						<th>尿素氮mg/l</th>
-						<th>记录时间</th>
+						<th>用户</th>
+						<th>点赞时间</th>
 						<th>操作</th>
 					</tr>
 					</thead>
 					<tbody>
-					<tr class="odd gradeX"  th:each="aikHrBloodSugar,iterStat : ${aikHrBloodSugars}"  >
-						<td th:text="${aikHrBloodSugar.bloodSugar}"></td>
-						<td th:text="${aikHrBloodSugar.tch}"></td>
-						<td th:text="${aikHrBloodSugar.tg}"></td>
-						<td th:text="${aikHrBloodSugar.hdlC}"></td>
-						<td th:text="${aikHrBloodSugar.ldlC}"></td>
-						<td th:text="${aikHrBloodSugar.cr}"></td>
-						<td th:text="${aikHrBloodSugar.bun}"></td>
+					<tr class="odd gradeX"  th:each="accCircleLike,iterStat : ${accCircleLikes}"  >
+						<td th:text="${accCircleLike.userId}"></td>
 						<td>
-							<span th:if="${aikHrBloodSugar.recordDate ne null}">
-								<span th:text="${#dates.format(aikHrBloodSugar.recordDate, 'yyyy-MM-dd HH:mm:ss')}"> </span>
+							<span th:if="${accCircleLike.createDate ne null}">
+								<span th:text="${#dates.format(accCircleLike.createDate, 'yyyy-MM-dd HH:mm:ss')}"> </span>
 							</span>
 						</td>
 						<td></td>
@@ -86,7 +74,7 @@
 			<div class="form-body">
 				<div class="form-group">
 					<div class="note note-success">
-						<h4 class="block">血常规指标类</h4>
+						<h4 class="block">评论</h4>
 							<p></p>
 						</div>
 				</div>
@@ -94,37 +82,19 @@
 			 <table class="table table-striped table-bordered table-hover" id="sample_1">
 					<thead>
 					<tr>
-						<th>血红蛋白g/l</th>
-						<th>红细胞^12/l</th>
-						<th>白细胞^9/l</th>
-						<th>血小板^9/l</th>
-						<th>网织红细胞计数%</th>
-						<th>中性杆状核粒细胞%</th>
-						<th>中性分叶核粒细胞mmol/l</th>
-						<th>嗜酸性粒细胞mg/l</th>
-						<th>嗜碱性粒细胞mg/l</th>
-						<th>淋巴细胞mg/l</th>
-						<th>单核细胞mg/l</th>
+						<th>评论人</th>
+						<th>评论内容</th>
 						<th>记录时间</th>
 						<th>操作</th>
 					</tr>
 					</thead>
 					<tbody>
-					<tr class="odd gradeX"  th:each="aikHrRoutineBlood,iterStat : ${aikHrRoutineBloods}"  >
-						<td th:text="${aikHrRoutineBlood.hb}"></td>
-						<td th:text="${aikHrRoutineBlood.rbc}"></td>
-						<td th:text="${aikHrRoutineBlood.wbc}"></td>
-						<td th:text="${aikHrRoutineBlood.plt}"></td>
-						<td th:text="${aikHrRoutineBlood.ret}"></td>
-						<td th:text="${aikHrRoutineBlood.bn}"></td>
-						<td th:text="${aikHrRoutineBlood.sn}"></td>
-						<td th:text="${aikHrRoutineBlood.eos}"></td>
-						<td th:text="${aikHrRoutineBlood.baso}"></td>
-						<td th:text="${aikHrRoutineBlood.lym}"></td>
-						<td th:text="${aikHrRoutineBlood.mnc}"></td>
+					<tr class="odd gradeX"  th:each="accCircleComment,iterStat : ${accCircleComments}"  >
+						<td th:text="${accCircleComment.commenterId}"></td>
+						<td th:text="${accCircleComment.content}"></td>
 						<td>
-						<span th:if="${aikHrRoutineBlood.recordDate ne null}">
-							<span th:text="${#dates.format(aikHrRoutineBlood.recordDate, 'yyyy-MM-dd HH:mm:ss')}"> </span>
+						<span th:if="${accCircleComment.createDate ne null}">
+							<span th:text="${#dates.format(accCircleComment.createDate, 'yyyy-MM-dd HH:mm:ss')}"> </span>
 						</span>
 						
 						</td>
@@ -135,47 +105,7 @@
 				
 			</div>
 			
-			<div class="form-body">
-				<div class="form-group">
-					<div class="note note-success">
-						<h4 class="block">肿瘤标志物指标</h4>
-							<p></p>
-						</div>
-				</div>
-				
-				<table class="table table-striped table-bordered table-hover" id="sample_1">
-					<thead>
-					<tr>
-						<th>甲胎蛋白</th>
-						<th>癌胚抗原</th>
-						<th>糖类抗原ca19</th>
-						<th>胃蛋白酶原I和II</th>
-						<th>糖类抗原ca72</th>
-						<th>鳞癌相关抗原</th>
-						<th>记录时间</th>
-						<th>操作</th>
-					</tr>
-					</thead>
-					<tbody>
-					<tr class="odd gradeX"  th:each="aikHrTumorMarkers,iterStat : ${aikHrTumorMarkerss}"  >
-						<td th:text="${aikHrTumorMarkers.afp}"></td>
-						<td th:text="${aikHrTumorMarkers.cea}"></td>
-						<td th:text="${aikHrTumorMarkers.ca19}"></td>
-						<td th:text="${aikHrTumorMarkers.pg}"></td>
-						<td th:text="${aikHrTumorMarkers.ca72}"></td>
-						<td th:text="${aikHrTumorMarkers.scc}"></td>
-						<td>
-						<span th:if="${aikHrTumorMarkers.recordDate ne null}">
-							<span th:text="${#dates.format(aikHrTumorMarkers.recordDate, 'yyyy-MM-dd HH:mm:ss')}"> </span>
-						</span>
-						</td>
-						<td></td>
-					</tr>
-					</tbody>
-				</table>
-				
-			</div>
- -->			
+			
 			<div class="form-actions fluid">
 				<div class="row">
 					<div class="col-md-12">
