营养元素摄于量对比分析

--- a/aik-app/aik-manager/src/main/webapp/templates/carousel/carouselAdd.html
+++ b/aik-app/aik-manager/src/main/webapp/templates/carousel/carouselAdd.html
@@ -2,7 +2,7 @@
 <div class="portlet box blue">
 	<div class="portlet-title">
 		<div class="caption">
-			<i class="fa fa-reorder"></i>食物分类添加
+			<i class="fa fa-reorder"></i>轮播图添加
 		</div>
 		<div class="tools">
 			<a href="javascript:;" class="collapse">
