--- a/aik-app/aik-manager/src/main/webapp/templates/index.html
+++ b/aik-app/aik-manager/src/main/webapp/templates/index.html
@@ -224,7 +224,7 @@
 						</a>
 					</li>
 					<li>
-						<a href="javascript:;" data-pre="a-menu" data-url="/foodCollects/index">
+						<a href="javascript:;" data-pre="a-menu" data-url="/dailyNutrition/index">
 							营养元素摄于量对比分析
 						</a>
 					</li>
